--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-	<h1>Welcome to the world of Web development</h1>
+	<div id="text"> 
+		<h1>Welcome to the world of Web development</h1>
+	</div>
+	
 
 
     <script type="text/javascript" src="./script.js">
